--- a/sass/style.css
+++ b/sass/style.css
@@ -1,6 +1,5 @@
 body {
-  color: rgb(77, 211, 193);
-  font: 100% "Open Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
   overflow-x: hidden;
   margin: 0px;
 }
@@ -948,12 +947,6 @@ footer .foot {
   }
   to {
     opacity: 1;
-  }
-}
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next, .text {
-    font-size: 11px;
   }
 }
 
