--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,5 @@
-$primary-color: rgb(77, 211, 193);
-$font-stack: 'Open Sans', sans-serif;
-$second-color: rgba(0, 0, 0, 0.616);
-
 body{
-    color: $primary-color;
-    font: 100% $font-stack;
+    font-family: 'Open Sans', sans-serif;;
     overflow-x: hidden;
     margin: 0px;
 }
@@ -896,9 +891,4 @@ footer{
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
 }
